<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/myProfileAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_mob_my_profile_view_ad_unit_id"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/myProfileAdView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@drawable/style_border_button">

                <ImageView
                    android:id="@+id/userImageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:gravity="center" />

            </RelativeLayout>

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/e_hint_first_name"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/i_have" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/e_hint_last_name"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/i_have" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/e_hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/i_have" />

            <EditText
                android:id="@+id/numberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/e_hint_phone_number"
                android:inputType="phone"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/i_have" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="0.45"
            android:background="@drawable/style_border_square_b"
            android:text="@string/e_label_reset"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saveDataBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.45"
            android:background="@drawable/style_border_square_b"
            android:text="@string/e_label_save"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>